# django-seed-elastic

./: .gitignore  LICENSE  README.rst  setup.cfg
docs/: initial
seed_es/: apps.py  search.py  urls.py  utils.py  views.py
seed_es/tests/: tests.py  tests_live.py  tests_setup.py
