[metadata]
name = django-seed-elastic
version = 0.1
description = A Django app to search FIRST related seed documents and trials using ElasticSearch.
long_description = file: README.rst
url = https://www.firstseedtests.com/
author = Jessica Prenger Bhalerao
author_email = jessie.bhalerao@gmail.com
license = proprietary and confidential
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: proprietary
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
install_requires =
    django-elasticsearch-dsl
    djangorestframework
packages = find: